[package]
name = "MBW"
version = "0.1.0"
authors = ["Javad Asgari Shafique <javadshafique@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
tui = "0.14.0"
async-std = "1.7.0"
serde = "1.0.124"
bincode = "1.3.2"
