[package]
name = "MBW"
version = "0.1.0"
authors = ["Javad Asgari Shafique <javadshafique@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
async-std = "1.7.0"
serde = "1.0.124"
bincode = "1.3.2"
