[package]
name = "mbw"
version = "0.1.0"
authors = ["Javad Asgari Shafique <javadshafique@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
bracket-lib = "0.8.1"
async-std = "1.7.0"
serde = { version = "1.0.124", features = ["derive"] }
bincode = "1.3.2"
rand = "0.8.3"

[features]
default = ["client"]

server = []
client = []
